--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: c
 script: make test
-before_install:	sudo apt-get update && sudo apt-get install -y check
+before_install:
+        sudo apt-get update && sudo apt-get install -y check
 addons:
         apt:
                 update: true
